# datafusion-parallelism

./: .gitignore  .gitmodules  Cargo.toml  benchmarking.md  dockerfile
benches/: build_speed.rs  exponential_distribution.rs  lookup_speed.rs  my_benchmark.rs  sort.rs
benches/utils/: mod.rs  prepare_query.rs  register_tables.rs  static_table.rs
results/1/: ERROR.txt
src/: api_utils.rs  lib.rs  main.rs  parallel_join.rs  parallel_join_execution_state.rs  parse_sql.rs  sql_planner.rs  use_parallel_join_rule.rs
src/operator/: build_implementation.rs  lookup_consumers.rs  mod.rs  parallel_hash_join.rs  parallel_hash_join_executor.rs  parallel_hash_join_stream.rs  use_parallel_hash_join_rule.rs  use_work_stealing_repartition_rule.rs  work_stealing_repartition_exec.rs
src/shared/: datafusion_private.rs  mod.rs  shared.rs  streaming_probe_lookup.rs
src/utils/: abort_on_drop.rs  async_initialize_once.rs  barrier_once.rs  bypass_hasher.rs  chain_afterwards.rs  concrete_value.rs  concurrent_bit_set.rs  concurrent_join_map.rs  concurrent_queued_self_hash_join_map.rs  concurrent_self_hash_join_map.rs  future_to_record_batch_stream.rs  index_lookup.rs  initialize_copies_once.rs  initialize_last.rs  limited_rc.rs  local_runtime_reference.rs  mod.rs  once_notify.rs  parallel_compaction_batch_list.rs  partitioned_concurrent_join_map.rs  partitioned_concurrent_self_hash_join_map.rs  perform_once.rs  self_hash_map_types.rs  (+2 more)
tpc/: Cargo.toml  pyproject.toml  readme.md
tpc/scripts/: _run_benchmark.sh  benchmark-cloud.sh  generate.sh  run-cloud-benchmark.sh
tpc/src/: main.rs
(+67 files in other folders)
