[package]
name = "datafusion-parallelism-tcp"
version = "0.1.0"
edition = "2021"
autobenches = false

[dependencies]
datafusion = "40.0.0"
serde = { version = "1.0.203", features = ["derive"] }
structopt = "0.3.26"
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
serde_json = "1.0.117"
datafusion-parallelism = { path = ".." }
